welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:-6: error: Missing closing brace `}' assumed here
try {
^sleepIn:1: error: expected class or object definition
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
^